<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuHome"
          android:enabled="true"
          android:icon="@drawable/icon_home"
          android:title="@string/menu_home"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menuDashboard"
          android:enabled="true"
          android:icon="@drawable/icon_airport"
          android:title="@string/menu_dashboard"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menuNotification"
          android:enabled="true"
          android:icon="@drawable/icon_notification"
          android:title="@string/menu_notification"
          app:showAsAction="ifRoom"/>

</menu>