<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/fragmentHome">

    <fragment
            android:id="@+id/fragmentHome"
            android:label="@string/fragment_home"
            android:name="com.yoesuv.navigationadvanced.HomeFragment"
            tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
            android:id="@+id/fragmentDashboard"
            android:label="@string/fragment_dashboard"
            android:name="com.yoesuv.navigationadvanced.DashboardFragment"
            tools:layout="@layout/fragment_dashboard">

    </fragment>

    <fragment
            android:id="@+id/fragmentNotification"
            android:label="@string/fragment_notification"
            android:name="com.yoesuv.navigationadvanced.NotificationFragment"
            tools:layout="@layout/fragment_notification">

    </fragment>

</navigation>